backend/yamlfiles/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django-backend
  labels:
    app: django
spec:
  selector:
    app: django
    
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
