backend/yamlfiles/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: django-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: registry.hamdocker.ir/ashkntarivrdi/my-django-app:v1.8
        command: ["sh", "-c"]
        args: ["python3 manage.py migrate --noinput && python3 manage.py collectstatic --noinput && gunicorn postgresTest.wsgi:application --bind 0.0.0.0:8000"]
        
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: my-registry-secret

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: django
  name: django-loadbalancer
  namespace: django-backend
spec:
  selector:
    app: django
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
